# Localization_ws

./: .dockerignore  .gitattributes  .gitignore  ADR.md  AGENTS.md  ARCHITECTURE.md  PLAN.md  README.MD  README.md  STATUS.md  manifest.yaml  package.json  pyproject.toml  tmp_change_docker_no_proxy.sh
.agents/skills/bringup-naming/: SKILL.md
.agents/skills/ci-cd/: SKILL.md
.agents/skills/docker-artifact-migration/: SKILL.md
.agents/skills/docker-dev-mounts/: SKILL.md
.agents/skills/docker-image-naming/: SKILL.md
.agents/skills/entities-development-ids/: SKILL.md
.agents/skills/fleet-bootstrap/: SKILL.md
.agents/skills/lidar-debug/: SKILL.md
.agents/skills/nv-network-proxy/: SKILL.md
.agents/skills/registry-network-design/: SKILL.md
.agents/skills/ros-debug-bringup/: SKILL.md
.agents/skills/setup-device/: SKILL.md  livox_sdk_install.sh
.agents/skills/setup-runtime/: SKILL.md
.agents/skills/yopo-lidar-preproc/: SKILL.md
.agents/skills/yopo-test-tiers/: SKILL.md
.agents/skills/yopo-vc-sync/: SKILL.md
.agents/skills/yopo-viz-bringup/: SKILL.md  check_env.sh  yopo_viz_bringup.sh
.github/: renovate.json
FAST_LIO/: CMakeLists.txt  README.md
FAST_LIO/config/: mid360.yaml
FAST_LIO/include/ikd-Tree/: ikd_Tree.cpp
FAST_LIO/launch/: bringup_mid360s.launch  bringup_mid360s_reloc.launch  initial_align.launch  lidar.launch  mapping_mid360.launch  mapping_mid360_reloc.launch  odom_mid360_with_map.launch
FAST_LIO/scripts/: bag_to_las_converter.py
FAST_LIO/src/: cpu_monitor.cpp  initial_align.cpp  initial_map_publisher.cpp  laserMapping.cpp  preprocess.cpp
bringup/: CMakeLists.txt  package.xml
bringup/config/: fast_lio_mid360.yaml  fast_lio_mid360s.yaml  initial_align.yaml  lidar.json  smoke_fov_test.yaml  smoke_l2_calib_bag.yaml  smoke_l2_calib_c5pro.yaml
bringup/launch/: bringup_mid360.launch  bringup_mid360_prior.launch  bringup_mid360_reloc.launch  bringup_mid360s.launch  bringup_mid360s_prior.launch  bringup_mid360s_reloc.launch  c5pro_livox.launch  c5pro_mapping.launch  c5pro_mapping_reloc.launch  c5pro_slam.launch  c5pro_slam_map.launch  c5pro_slam_prior.launch  c5pro_slam_reloc.launch  c5v1_livox.launch  c5v1_mapping.launch  c5v1_mapping_reloc.launch  c5v1_odom_with_map.launch  c5v1_slam.launch  c5v1_slam_map.launch  c5v1_slam_prior.launch  c5v1_slam_reloc.launch  ekf_quat_lidar.launch  ekf_quat_lidar_mavros.launch  initial_align.launch  initial_map_publisher.launch  mapping_mid360.launch  mapping_mid360_reloc.launch  mapping_mid360s.launch  mapping_mid360s_reloc.launch  msg_MID360.launch  msg_MID360s.launch  odom_mid360_with_map.launch  smoke_fov.launch  smoke_fov_test.launch  smoke_l1.launch  smoke_l2_calib.launch  smoke_l2_calib_bag.launch  smoke_l2_fov.launch  smoke_l2_slam.launch
bringup/resource/: MANIFEST
bringup/resource/livox_ros_driver2/lib/: livox_ros_driver2_node
bringup/resource/livox_ros_driver2/share/cmake/: livox_ros_driver2-msg-extras.cmake  livox_ros_driver2-msg-paths.cmake  livox_ros_driver2Config.cmake
bringup/rviz_cfg/: smoke_fov_test.rviz  smoke_l2_calib.rviz
bringup/scripts/: container-smoke-l1.sh  container-smoke-l2-eval.sh  container-smoke.sh
bringup/tools/: downsample_pcd.py  generate_pcd.py
completions/: bun-localization.bash  prod.bash
docker/: Dockerfile  Dockerfile.base  Dockerfile.calib  Dockerfile.prod  docker-compose.yml  entrypoint.sh  ros-archive-keyring.gpg
docs/: AGENT-API.md  dependency-bot-guide.md  usb-link-benchmark.md
ekf_quat_pose/launch/: ekf_quat_lidar.launch  ekf_quat_lidar_mavros.launch
frontend/: index.html  tsconfig.json
frontend/src/: App.tsx
frontend/src/analysis/: CategorySection.tsx  ParamCard.tsx  SourceRef.tsx  data.ts  index.tsx
frontend/src/compare/: BranchPoint.tsx  PipelineFlow.tsx  data.ts  index.tsx
frontend/src/components/: CpuGauge.tsx  NavBar.tsx  OdometryArrow.tsx  PointCloud.tsx  RecordingButton.tsx  Scene3D.tsx  StatusBar.tsx  TrajectoryLine.tsx
frontend/src/docs/: PipelineDocPage.tsx  generated-pipelines.json
frontend/src/hooks/: usePointCloud.ts  useReplayTopic.ts  useRosTopic.ts
frontend/src/lib/: ros-types.ts
frontend/src/store/: Recorder.ts  ReplayEngine.ts  SessionStore.ts  index.ts
incremental_map_publisher/: README.md
incremental_map_publisher/config/: rolling_map.yaml
incremental_map_publisher/include/rolling_map/: rolling_map_node.hpp
incremental_map_publisher/map_files/: _1_0_0  _1_0__1
incremental_map_publisher/msg/: grid_PC.msg  grid_PC_vec.msg  rc_state.msg
l10n/: schema.py
l10n/cli/: devel.py  integration.py
l10n/core/: ssh.py  workspace.py
livox_ros_driver2/: CMakeLists.txt  README.md
livox_ros_driver2/launch_ROS1/: msg_MID360s.launch
releases/c5pro-mid360s-livox/config/: anomaly.yaml
releases/c5pro-mid360s-livox/scripts/: check-l1.sh  check-l2.sh
releases/c5pro-mid360s-mavros/config/: ekf.yaml  (+4 more)
ros_packages/ekf_quat_pose/: CMakeLists.txt
ros_packages/incremental_map_publisher/: CMakeLists.txt  package.xml  parameter.txt
ros_packages/incremental_map_publisher/include/rolling_map/: file_utils.hpp  grid_map.hpp  rolling_grid_map_manager.hpp
ros_packages/incremental_map_publisher/launch/: map_files_publisher.launch  rolling_map_publisher.launch
ros_packages/incremental_map_publisher/map_files/: 0_0_0  0_0__1  0__1_0  0__1__1  _1__1_0
ros_packages/incremental_map_publisher/rviz_cfg/: rviz.rviz
ros_packages/incremental_map_publisher/src/: map_files_publisher.cpp  rolling_map_publisher.cpp
src/: mqtt_bridge.py
src/cli/: build.ts  check.ts  dashboard.ts  devel.ts  doc.ts  docker-build.ts  docker-push.ts  docker-shell.ts  docker-smoke.ts  docker-start.ts  fleet-artifacts.ts  fleet-bundle.ts  index.ts  prod.ts  registry.ts  release.ts  rviz.ts  smoke.ts  status.ts  sync.ts  view-fastlio.ts
src/core/: completions-db.ts  config.ts  network.ts  pipeline-doc.ts  registry-paths.ts  ssh.ts  viewer.ts  workspace.ts
src/server/: index.ts  mqtt.ts
src/types/: ros.ts
src/web/: artifact-server.ts  tracker-server.ts  tracker.html
test/: config.sh  daemon.sh  runner.sh
test/lib/: checks.sh
(+29 files in other folders)
