<?xml version="1.0"?>
<package format="2">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>Combined bringup launch files for FAST-LIO on Jetson</description>
  <maintainer email="rec@example.com">rec</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <export>
    <architecture_independent/>
  </export>
</package>
